WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48410
IDBObjectStoreBackend and IDBIndexBackend should not depend on IDBDatabaseBackend
https://bugs.webkit.org/show_bug.cgi?id=48410
Summary
IDBObjectStoreBackend and IDBIndexBackend should not depend on IDBDatabaseBac...
Jeremy Orlow
Reported
2010-10-27 04:04:48 PDT
IDBObjectStoreBackend and IDBIndexBackend should not depend on IDBDatabaseBackend
Attachments
Patch
(20.85 KB, patch)
2010-10-27 04:06 PDT
,
Jeremy Orlow
steveblock
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2010-10-27 04:06:28 PDT
Created
attachment 72001
[details]
Patch
Jeremy Orlow
Comment 2
2010-10-27 04:06:56 PDT
An easy one.
Andrei Popescu
Comment 3
2010-10-27 05:52:08 PDT
LGTM
Steve Block
Comment 4
2010-11-01 10:50:35 PDT
Comment on
attachment 72001
[details]
Patch r=me
Jeremy Orlow
Comment 5
2010-11-05 04:53:57 PDT
Committed
r71408
: <
http://trac.webkit.org/changeset/71408
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug