WebCore/storage/IDBIndexBackendImpl.h
@@ -34,18 +34,19 @@ namespace WebCore {
 
 class IDBKey;
 class IDBObjectStoreBackendImpl;
+class IDBSQLiteDatabase;
 class SQLiteDatabase;
 class ScriptExecutionContext;
 
 class IDBIndexBackendImpl : public IDBIndexBackendInterface {
 public:
-    static PassRefPtr<IDBIndexBackendImpl> create(IDBObjectStoreBackendImpl* objectStore, int64_t id, const String& name, const String& keyPath, bool unique)
+    static PassRefPtr<IDBIndexBackendImpl> create(IDBSQLiteDatabase* database, int64_t id, const String& name, const String& storeName, const String& keyPath, bool unique)
     {
-        return adoptRef(new IDBIndexBackendImpl(objectStore, id, name, keyPath, unique));
+        return adoptRef(new IDBIndexBackendImpl(database, id, name, storeName, keyPath, unique));
     }
-    static PassRefPtr<IDBIndexBackendImpl> create(IDBObjectStoreBackendImpl* objectStore, const String& name, const String& keyPath, bool unique)
+    static PassRefPtr<IDBIndexBackendImpl> create(IDBSQLiteDatabase* database, const String& name, const String& storeName, const String& keyPath, bool unique)
     {
-        return adoptRef(new IDBIndexBackendImpl(objectStore, name, keyPath, unique));
+        return adoptRef(new IDBIndexBackendImpl(database, name, storeName, keyPath, unique));
     }
     virtual ~IDBIndexBackendImpl();
 
@@ -60,7 +61,7 @@ public:
 
     // Implements IDBIndexBackendInterface.
     virtual String name() { return m_name; }
-    virtual String storeName();
+    virtual String storeName() { return m_storeName; }
     virtual String keyPath() { return m_keyPath; }
     virtual bool unique() { return m_unique; }
 
@@ -69,11 +70,9 @@ public:
     virtual void get(PassRefPtr<IDBKey>, PassRefPtr<IDBCallbacks>, IDBTransactionBackendInterface*, ExceptionCode&);
     virtual void getKey(PassRefPtr<IDBKey>, PassRefPtr<IDBCallbacks>, IDBTransactionBackendInterface*, ExceptionCode&);
 
-    IDBObjectStoreBackendImpl* objectStore() const { return m_objectStore.get(); }
-
 private:
-    IDBIndexBackendImpl(IDBObjectStoreBackendImpl*, int64_t id, const String& name, const String& keyPath, bool unique);
-    IDBIndexBackendImpl(IDBObjectStoreBackendImpl*, const String& name, const String& keyPath, bool unique);
+    IDBIndexBackendImpl(IDBSQLiteDatabase*, int64_t id, const String& name, const String& storeName, const String& keyPath, bool unique);
+    IDBIndexBackendImpl(IDBSQLiteDatabase*, const String& name, const String& storeName, const String& keyPath, bool unique);
 
     SQLiteDatabase& sqliteDatabase() const;
 
@@ -82,10 +81,11 @@ private:
 
     static const int64_t InvalidId = 0;
 
-    RefPtr<IDBObjectStoreBackendImpl> m_objectStore;
+    RefPtr<IDBSQLiteDatabase> m_database;
 
     int64_t m_id;
     String m_name;
+    String m_storeName;
     String m_keyPath;
     bool m_unique;
 };
